<resources>
    <string name="app_name">Topic Tok</string>
    <string name="title_activity_sign_in">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_conform">Conform password</string>
    <string name="prompt_username">User name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Resister</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="post_title">Write your interesting title</string>
    <string name="post_topic">Tell me more detail!</string>
    <string name="error_invalid_username">This user name has been already used</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_main2">Topic for you</string>
    <string name="title_home">Timeline</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
